Fixing shits colors

--- a/index.html
+++ b/index.html
@@ -1697,43 +1697,35 @@
 
         <div class="BlueTeamTopUi">
             <div class="PlayerBoxTopUi">
-                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
-                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
-                    <div class="diamond-wrapperTopUi">
-                        <div class="displayNone Deadshadow"></div>
+                    <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
             </div>
 
             <div class="PlayerBoxTopUi">
-                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
-                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
-                <div class="center-containerTopUi">
-                    <div class="diamond-wrapperTopUi">
-                        <div class="displayNone Deadshadow"></div>
-                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
-                    </div>
-                </div>
-            </div>
-            <div class="PlayerBoxTopUi">
-                <img class="displayNone BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
                 <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
-                    <div class="diamond-wrapperTopUi">
-                        <div class="Deadshadow"></div>
+                    <div class="diamond-wrapperTopUiDeathMatch">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+            </div>
+            <div class="PlayerBoxTopUi">
+                <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
             </div>
 
             <div class="PlayerBoxTopUi">
-                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
-                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
-                    <div class="diamond-wrapperTopUi">
-                        <div class="displayNone Deadshadow"></div>
+                    <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
@@ -1741,11 +1733,9 @@
             
 
             <div class="PlayerBoxTopUi">
-                <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
-                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
-                    <div class="diamond-wrapperTopUi">
-                        <div class="displayNone Deadshadow"></div>
+                    <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
