--- a/index.html
+++ b/index.html
@@ -1703,23 +1703,26 @@
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
+                <p class="DeathMatchPlayerKillAmount">0</p>
             </div>
 
             <div class="PlayerBoxTopUi">
-                <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
+                <p class="DeathMatchPlayerKillAmount">12</p>
             </div>
             <div class="PlayerBoxTopUi">
-                <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
+                <p class="DeathMatchPlayerKillAmount">99</p>
             </div>
 
             <div class="PlayerBoxTopUi">
