--- a/index.html
+++ b/index.html
@@ -1722,86 +1722,76 @@
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
-                <p class="DeathMatchPlayerKillAmount">99</p>
+                <p class="DeathMatchPlayerKillAmount">29</p>
             </div>
-
             <div class="PlayerBoxTopUi">
-                <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
+                <p class="DeathMatchPlayerKillAmount">19</p>
             </div>
-            
-
             <div class="PlayerBoxTopUi">
-                <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
+                <p class="DeathMatchPlayerKillAmount">33</p>
             </div>
-
-
         </div>
 
 
 
         <div class="RedTeamTopUi">
             <div class="PlayerBoxTopUi">
-                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
-                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
-                <div class="center-containerTopUi">
-                    <div class="Reddiamond-wrapperTopUi">
-                        <div class="displayNone Deadshadow"></div>
-                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
-                    </div>
-                </div>
-            </div>
-
-            <div class="PlayerBoxTopUi">
-                <img class="displayNone RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
-                    <div class="Reddiamond-wrapperTopUi">
-                        <div class="Deadshadow"></div>
+                    <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
-            </div>
-            <div class="PlayerBoxTopUi">
-                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
-                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
-                <div class="center-containerTopUi">
-                    <div class="Reddiamond-wrapperTopUi">
-                        <div class="displayNone Deadshadow"></div>
-                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
-                    </div>
-                </div>
+                <p class="DeathMatchPlayerKillAmount">0</p>
             </div>
 
             <div class="PlayerBoxTopUi">
-                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
-                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
-                    <div class="Reddiamond-wrapperTopUi">
-                        <div class="displayNone Deadshadow"></div>
+                    <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
+                <p class="DeathMatchPlayerKillAmount">12</p>
             </div>
-
             <div class="PlayerBoxTopUi">
-                <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
-                <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
-                    <div class="Reddiamond-wrapperTopUi">
-                        <div class="displayNone Deadshadow"></div>
+                    <div class="diamond-wrapperTopUiDeathMatch">
                       <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                     </div>
                 </div>
+                <p class="DeathMatchPlayerKillAmount">29</p>
+            </div>
+            <div class="PlayerBoxTopUi">
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUiDeathMatch">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+                <p class="DeathMatchPlayerKillAmount">19</p>
+            </div>
+            <div class="PlayerBoxTopUi">
+                <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+                <div class="center-containerTopUi">
+                    <div class="diamond-wrapperTopUiDeathMatch">
+                      <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                    </div>
+                </div>
+                <p class="DeathMatchPlayerKillAmount">33</p>
             </div>
         </div>
       </div>
