--- a/index.html
+++ b/index.html
@@ -1695,7 +1695,7 @@
 
         </div>
 
-        <div class="BlueTeamTopUi">
+        <div class="LefttDeathMatchTeamTopUi">
             <div class="PlayerBoxTopUi">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
@@ -1746,7 +1746,7 @@
 
 
 
-        <div class="RedTeamTopUi">
+        <div class="RightDeathMatchTeamTopUi">
             <div class="PlayerBoxTopUi">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
