--- a/index.html
+++ b/index.html
@@ -1798,6 +1798,11 @@
       
 
       <div class="RedEndScreen">
+        <img src="./imgs/DeathIconUI.png" alt="">
+        <div>
+            <p class="FistPDeathUi" >Lost the first round</p>
+            <p>Lost the first round</p>
+        </div>
       </div>
 
       
