Deah Text shits

--- a/index.html
+++ b/index.html
@@ -1799,9 +1799,9 @@
 
       <div class="RedEndScreen">
         <img src="./imgs/DeathIconUI.png" alt="">
-        <div>
+        <div class="TextOfDeathUi">
             <p class="FistPDeathUi" >Lost the first round</p>
-            <p>Lost the first round</p>
+            <p class="SecondPDeathUi">Lost the first round</p>
         </div>
       </div>
 
