--- a/index.html
+++ b/index.html
@@ -1802,6 +1802,7 @@
         <div class="TextOfDeathUi">
             <p class="FistPDeathUi" >Lost the first round</p>
             <p class="SecondPDeathUi">Lost the first round</p>
+            <p class="SecondPDeathUi">Lost the first round</p>
         </div>
       </div>
 
