--- a/index.html
+++ b/index.html
@@ -1806,7 +1806,7 @@
         </div>
       </div>
 
-      <div class="loader">
+      <div class="loader animate__fadeIn animate__animated">
         <div class="square" id="sq1"></div>
         <div class="square" id="sq2"></div>
         <div class="square" id="sq3"></div>
