--- a/index.html
+++ b/index.html
@@ -1804,6 +1804,10 @@
             <p class="SecondPDeathUi">Lost the first round</p>
             <p class="SecondPDeathUi">Lost the first round</p>
         </div>
+        <div class="KillDeathButton">
+            <div><p>Kill</p><p>21</p></div>
+            <div><p>Death</p><p>21</p></div>
+        </div>
       </div>
 
       <div class="loader animate__fadeIn animate__animated">
