--- a/index.html
+++ b/index.html
@@ -1805,8 +1805,8 @@
             <p class="SecondPDeathUi">Lost the first round</p>
         </div>
         <div class="KillDeathButton">
-            <div><p>Kill</p><p>21</p></div>
-            <div><p>Death</p><p>21</p></div>
+            <div class="RedKillDeathDiv"><p>Kill</p><p>21</p></div>
+            <div class="RedKillDeathDiv"><p>Death</p><p>21</p></div>
         </div>
       </div>
 
