--- a/index.html
+++ b/index.html
@@ -1804,9 +1804,12 @@
             <p class="SecondPDeathUi">Lost the first round</p>
             <p class="SecondPDeathUi">Lost the first round</p>
         </div>
-        <div class="KillDeathButton">
-            <div class="RedKillDeathDiv"><p>Kills</p><p>21</p></div>
-            <div class="RedKillDeathDiv"><p>Deaths</p><p>21</p></div>
+        <div class="BoxDeathKillAllDiv">
+            <div class="KillDeathButton">
+                <div class="RedKillDeathDiv"><p>Kills</p><p>21</p></div>
+                <div class="RedKillDeathDiv"><p>Deaths</p><p>21</p></div>
+            </div>
+            <div class="RedTeamTopKillerDiv"></div>
         </div>
       </div>
 
