Fixing some shiti codes

--- a/index.html
+++ b/index.html
@@ -1809,7 +1809,9 @@
                 <div class="RedKillDeathDiv"><p>Kills</p><p>21</p></div>
                 <div class="RedKillDeathDiv"><p>Deaths</p><p>21</p></div>
             </div>
-            <div class="RedTeamTopKillerDiv"></div>
+            <div class="RedTeamTopKillerDiv">
+                <div class="RedTopKillerLine"></div>
+            </div>
         </div>
       </div>
 
