--- a/index.html
+++ b/index.html
@@ -1811,6 +1811,10 @@
             </div>
             <div class="RedTeamTopKillerDiv">
                 <div class="RedTopKillerLine"></div>
+                <div class="DetailPlayerTopKilerUi">
+                    <img src="./imgs/steamprofile.png" alt="">
+                    <p>RadBlackPlayer</p>
+                </div>
             </div>
         </div>
       </div>
