--- a/index.html
+++ b/index.html
@@ -1687,16 +1687,16 @@
 
 
 
-      <div class="TopTeamPlayerUiDeathmatch ">
+      <div class="TopTeamPlayerUiDeathmatch animate__fadeIn animate__animated">
         <div class="CenterDetailTexts">
-            <p class="TimerUi">04:15</p>
-            <div class="RoundTeamsUiDeathmatch"><p class="TopKillNumber"><span>100</span> Kill</p></div>
-            <div class="RoundTeamsUiDeathmatch"><p class="TopKill">RaDBlasssk</p></div>
+            <p class="TimerUi  animate__fadeIn animate__animated anim2">04:15</p>
+            <div class="RoundTeamsUiDeathmatch animate__fadeIn animate__animated anim3"><p class="TopKillNumber"><span>100</span> Kill</p></div>
+            <div class="RoundTeamsUiDeathmatch animate__fadeIn animate__animated anim4"><p class="TopKill">RaDBlasssk</p></div>
 
         </div>
 
         <div class="LefttDeathMatchTeamTopUi">
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim5">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
@@ -1706,7 +1706,7 @@
                 <p class="DeathMatchPlayerKillAmount">0</p>
             </div>
 
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim4">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
@@ -1715,7 +1715,7 @@
                 </div>
                 <p class="DeathMatchPlayerKillAmount">12</p>
             </div>
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim3">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
@@ -1724,7 +1724,7 @@
                 </div>
                 <p class="DeathMatchPlayerKillAmount">29</p>
             </div>
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim2">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
@@ -1733,7 +1733,7 @@
                 </div>
                 <p class="DeathMatchPlayerKillAmount">19</p>
             </div>
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim2">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
@@ -1747,7 +1747,7 @@
 
 
         <div class="RightDeathMatchTeamTopUi">
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim2">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
@@ -1757,7 +1757,7 @@
                 <p class="DeathMatchPlayerKillAmount">0</p>
             </div>
 
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim2">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
@@ -1766,7 +1766,7 @@
                 </div>
                 <p class="DeathMatchPlayerKillAmount">12</p>
             </div>
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim3">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
@@ -1775,7 +1775,7 @@
                 </div>
                 <p class="DeathMatchPlayerKillAmount">29</p>
             </div>
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim4">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
@@ -1784,7 +1784,7 @@
                 </div>
                 <p class="DeathMatchPlayerKillAmount">19</p>
             </div>
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim5">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
                     <div class="diamond-wrapperTopUiDeathMatch">
@@ -1797,19 +1797,19 @@
       </div>
       
 
-      <div class="RedEndScreen">
-        <img src="./imgs/DeathIconUI.png" alt="">
-        <div class="TextOfDeathUi">
+      <div class="RedEndScreen animate__fadeIn animate__animated">
+        <img class="animate__fadeIn animate__animated anim1" src="./imgs/DeathIconUI.png" alt="">
+        <div class="TextOfDeathUi animate__fadeIn animate__animated anim2">
             <p class="FistPDeathUi" >Lost the first round</p>
             <p class="SecondPDeathUi">Lost the first round</p>
             <p class="SecondPDeathUi">Lost the first round</p>
         </div>
         <div class="BoxDeathKillAllDiv">
-            <div class="KillDeathButton">
+            <div class="KillDeathButton animate__fadeIn animate__animated anim3">
                 <div class="RedKillDeathDiv"><p>Kills</p><p>21</p></div>
                 <div class="RedKillDeathDiv"><p>Deaths</p><p>21</p></div>
             </div>
-            <div class="RedTeamTopKillerDiv">
+            <div class="RedTeamTopKillerDiv animate__fadeIn animate__animated anim4">
                 <div class="RedTopKillerLine"></div>
                 <div class="DetailPlayerTopKilerUi">
                     <div class="CrownAndSteamTopKiller">
@@ -1830,7 +1830,7 @@
                 <p class="TextIndeDeathUiInside">20<span>kills</span></p>
             </div>
 
-            <div class="BlueTeamTopKillerDiv">
+            <div class="BlueTeamTopKillerDiv animate__fadeIn animate__animated anim5">
                 <div class="BlueTopKillerLine"></div>
                 <div class="DetailPlayerTopKilerUi">
                     <div class="CrownAndSteamTopKiller">
@@ -1851,25 +1851,25 @@
                 <p class="TextIndeDeathUiInside">20<span>kills</span></p>
             </div>
 
-            <div class="TimerTeamTopKillerDiv">
+            <div class="TimerTeamTopKillerDiv animate__fadeIn animate__animated anim6">
                 <p>20:24</p><p>Seconds to start the next round</p>
             </div>
         </div>
       </div>
 
-      <div class="GreenEndScreen">
-        <img src="./imgs/WinIconUI.png" alt="">
-        <div class="TextOfDeathUi">
+      <div class="GreenEndScreen animate__fadeIn animate__animated anim1">
+        <img class="animate__fadeIn animate__animated" src="./imgs/WinIconUI.png" alt="">
+        <div class="TextOfDeathUi animate__fadeIn animate__animated anim2">
             <p class="FistPDeathUi" >Win the first round</p>
             <p class="SecondPDeathUiGreen">Win the first round</p>
             <p class="SecondPDeathUiGreen">Win the first round</p>
         </div>
         <div class="BoxDeathKillAllDiv">
-            <div class="KillDeathButton">
+            <div class="KillDeathButton animate__fadeIn animate__animated anim3">
                 <div class="GreenKillDeathDiv"><p>Kills</p><p>21</p></div>
                 <div class="GreenKillDeathDiv"><p>Deaths</p><p>21</p></div>
             </div>
-            <div class="RedTeamTopKillerDiv">
+            <div class="RedTeamTopKillerDiv animate__fadeIn animate__animated anim4">
                 <div class="RedTopKillerLine"></div>
                 <div class="DetailPlayerTopKilerUi">
                     <div class="CrownAndSteamTopKiller">
@@ -1890,7 +1890,7 @@
                 <p class="TextIndeDeathUiInside">20<span>kills</span></p>
             </div>
 
-            <div class="BlueTeamTopKillerDiv">
+            <div class="BlueTeamTopKillerDiv animate__fadeIn animate__animated anim5">
                 <div class="BlueTopKillerLine"></div>
                 <div class="DetailPlayerTopKilerUi">
                     <div class="CrownAndSteamTopKiller">
@@ -1911,7 +1911,7 @@
                 <p class="TextIndeDeathUiInside">20<span>kills</span></p>
             </div>
 
-            <div class="GreenTimerTeamTopKillerDiv">
+            <div class="GreenTimerTeamTopKillerDiv animate__fadeIn animate__animated anim6">
                 <p>20:24</p><p>Seconds to start the next round</p>
             </div>
         </div>
