--- a/index.html
+++ b/index.html
@@ -1552,11 +1552,11 @@
         <div class="DeadLogPlayer animate__fadeInRight animate__animated"><div class="DeadLogRedLine"></div><p><span>RADBLACKRAD</span> <img  src="./imgs/GunsIcon/Sniper_Icon.png" alt=""> <img class="" src="./imgs/GunsIcon/HeadShot-Icon.png" alt=""> <span>ParzivalKoni</span></p></div>
       </div>
 
-      <div class="TopTeamPlayerUi">
+      <div class="TopTeamPlayerUi  animate__fadeIn animate__animated">
         <div class="CenterDetailTexts">
-            <p class="TimerUi">04:15</p>
-            <div class="RoundTeamsUi"><p>2</p><p class="AfacadFont">/</p><p>5</p></div>
-            <div class="RoundsShapeUi">
+            <p class="TimerUi animate__fadeIn animate__animated anim1">04:15</p>
+            <div class="RoundTeamsUi animate__fadeIn animate__animated anim2"><p>2</p><p class="AfacadFont">/</p><p>5</p></div>
+            <div class="RoundsShapeUi animate__fadeIn animate__animated anim3">
                 <div class="WhiteRoundShape"></div>
                 <div class="WhiteRoundShape"></div>
                 <div class="GrayRoundShape"></div>
@@ -1566,7 +1566,7 @@
         </div>
 
         <div class="BlueTeamTopUi">
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim6">
                 <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
                 <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
@@ -1577,7 +1577,7 @@
                 </div>
             </div>
 
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim5">
                 <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
                 <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
@@ -1587,7 +1587,7 @@
                     </div>
                 </div>
             </div>
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim4">
                 <img class="displayNone BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
                 <img class=" DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
@@ -1598,7 +1598,7 @@
                 </div>
             </div>
 
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim3">
                 <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
                 <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
@@ -1610,7 +1610,7 @@
             </div>
             
 
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim2">
                 <img class="BlueLineBehindSteamBg" src="./imgs/RoomSteamBG.svg" alt="">
                 <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
@@ -1627,7 +1627,7 @@
 
 
         <div class="RedTeamTopUi">
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim2">
                 <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
                 <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
@@ -1638,7 +1638,7 @@
                 </div>
             </div>
 
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim3">
                 <img class="displayNone RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
                 <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
@@ -1648,7 +1648,7 @@
                     </div>
                 </div>
             </div>
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim4">
                 <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
                 <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
@@ -1659,7 +1659,7 @@
                 </div>
             </div>
 
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim5">
                 <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
                 <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
@@ -1670,7 +1670,7 @@
                 </div>
             </div>
 
-            <div class="PlayerBoxTopUi">
+            <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim6">
                 <img class=" RedLineBehindSteamBg" src="./imgs/RoomSteamBGRed.svg" alt="">
                 <img class="displayNone DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
                 <div class="center-containerTopUi">
