fixing this shit by me

--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,12 @@
               <div class="NormalButtonJoinPass animate__fadeIn animate__animated anim3">
                 <div class="InsideNormalButton">
                     <div class="LineTopJoinNormal"></div>
-                    <p>Request To Join</p>
+                    <p>Join with possword</p>
+                    <div class="LineBottomJoinNormal"></div>
+                </div>
+                <div class="InsideNormalButton">
+                    <div class="LineTopJoinNormal"></div>
+                    <p>Request</p>
                     <div class="LineBottomJoinNormal"></div>
                 </div>
             </div>
