--- a/index.html
+++ b/index.html
@@ -1118,18 +1118,22 @@
                 <div class="WhitlineBottomInput"></div>
               </div>
 
-              <div class="NormalButtonJoinPass animate__fadeIn animate__animated anim3">
-                <div class="InsideNormalButton">
-                    <div class="LineTopJoinNormal"></div>
-                    <p>Join with possword</p>
-                    <div class="LineBottomJoinNormal"></div>
+              <div class="JoinandRequestButton">
+                <div class="NormalButtonJoinPass animate__fadeIn animate__animated anim3">
+                    <div class="InsideNormalButton">
+                        <div class="LineTopJoinNormal"></div>
+                        <p>Join with possword</p>
+                        <div class="LineBottomJoinNormal"></div>
+                    </div>
                 </div>
-                <div class="InsideNormalButton">
-                    <div class="LineTopJoinNormal"></div>
-                    <p>Request</p>
-                    <div class="LineBottomJoinNormal"></div>
+                <div class="NormalButtonJoinPass animate__fadeIn animate__animated anim3">
+                    <div class="InsideNormalButtonRequest">
+                        <div class="LineTopJoinNormalReuquest"></div>
+                        <p>Request</p>
+                        <div class="LineBottomJoinNormalReuquest"></div>
+                    </div>
                 </div>
-            </div>
+              </div>
         </div>
       </div>
 
