--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
                         <div class="LineBottomJoinNormal"></div>
                     </div>
                 </div>
-                <div class="NormalButtonJoinPass animate__fadeIn animate__animated anim3">
+                <div class="NormalButtonJoinPassreuqest animate__fadeIn animate__animated anim4">
                     <div class="InsideNormalButtonRequest">
                         <div class="LineTopJoinNormalReuquest"></div>
                         <p>Request</p>
