--- a/index.html
+++ b/index.html
@@ -1939,7 +1939,17 @@
       </div>
 
       <div class="RequestNotifDiv">
-        <div class="RequestNotifBox"></div>
+        <div class="RequestNotifBox"><div class="RequestPlayerRedLine"></div>
+        <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim3">
+            <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+            <div class="center-containerTopUi">
+                <div class="diamond-wrapperTopUiDeathMatch">
+                  <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
+                </div>
+            </div>
+            <p class="DeathMatchPlayerKillAmount">29</p>
+        </div>
+    </div>
       </div>
 
 
