--- a/index.html
+++ b/index.html
@@ -1940,7 +1940,7 @@
 
       <div class="RequestNotifDiv">
         <div class="RequestNotifBox"><div class="RequestPlayerRedLine"></div>
-        <div class="PlayerBoxTopUi animate__fadeIn animate__animated anim3">
+        <div class="PlayerBoxRequestJoin animate__fadeIn animate__animated anim3">
             <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
             <div class="center-containerTopUi">
                 <div class="diamond-wrapperTopUiDeathMatch">
