--- a/index.html
+++ b/index.html
@@ -1941,9 +1941,9 @@
       <div class="RequestNotifDiv">
         <div class="RequestNotifBox"><div class="RequestPlayerRedLine"></div>
         <div class="PlayerBoxRequestJoin animate__fadeIn animate__animated anim3">
-            <img class="DeadLineBehindSteamBg" src="./imgs/RoomSteamBGDead.svg" alt=""> 
+            <img class="DeadLineBehindSteamBgRequest" src="./imgs/RoomSteamBGDead.svg" alt=""> 
             <div class="center-containerTopUi">
-                <div class="diamond-wrapperTopUiDeathMatch">
+                <div class="diamond-wrapperTopUiDeathMatchRequest">
                   <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                 </div>
             </div>
