--- a/index.html
+++ b/index.html
@@ -1947,8 +1947,12 @@
                   <img src="./imgs/steamprofile.png" alt="Cx-LaserTag">
                 </div>
             </div>
-            <p class="DeathMatchPlayerKillAmount">29</p>
         </div>
+        <div class="DeatailTextsRequest">
+            <p>Radblack <span>ID: 23</span></p>
+            <p>A player is requesting to join the room. Do you want to accept it?</p>
+        </div>
+        <div></div>
     </div>
       </div>
 
