--- a/index.html
+++ b/index.html
@@ -1939,7 +1939,7 @@
       </div>
 
       <div class="RequestNotifDiv">
-        <div class="RequestNotifBox"><div class="RequestPlayerRedLine"></div>
+        <div class="RequestNotifBox animate__fadeInRight animate__animated"><div class="RequestPlayerRedLine"></div>
         <div class="PlayerBoxRequestJoin animate__fadeIn animate__animated anim3">
             <img class="DeadLineBehindSteamBgRequest" src="./imgs/RoomSteamBGDead.svg" alt=""> 
             <div class="center-containerTopUi">
@@ -1952,7 +1952,10 @@
             <p>Radblack <span>ID: 23</span></p>
             <p>A player is requesting to join the room. Do you want to accept it?</p>
         </div>
-        <div></div>
+        <div class="AcceptDenidDivReq">
+            <div class="AcceptButtonDiv"><p>Accept</p></div>
+            <div class="DeclineButtonDiv"><p>Decline</p></div>
+        </div>
     </div>
       </div>
 
