--- a/index.html
+++ b/index.html
@@ -1960,7 +1960,10 @@
       </div>
 
       <div>
-        
+        <div>
+            <p>Head Shot Kill Number 20</p>
+            <p>Head Shot Kill Number 20</p>
+        </div>
       </div>
 
 
