--- a/index.html
+++ b/index.html
@@ -1960,7 +1960,7 @@
       </div>
 
       <div>
-        <div>
+        <div class="KillTextDownScreen">
             <p>Head Shot Kill Number 20</p>
             <p>Head Shot Kill Number 20</p>
         </div>
