--- a/index.html
+++ b/index.html
@@ -1959,7 +1959,7 @@
     </div>
       </div>
 
-      <div>
+      <div class="TextBottomScreenDiv">
         <div class="KillTextDownScreen">
             <p>Head Shot Kill Number 20</p>
             <p>Head Shot Kill Number 20</p>
