--- a/index.html
+++ b/index.html
@@ -1960,6 +1960,7 @@
       </div>
 
       <div class="TextBottomScreenDiv">
+        <img src="./imgs/HeadShotBAdge.png" alt="">
         <div class="KillTextDownScreen">
             <p>Head Shot Kill Number 20</p>
             <p>Head Shot Kill Number 20</p>
