--- a/index.html
+++ b/index.html
@@ -1959,12 +1959,15 @@
     </div>
       </div>
 
-      <div class="TextBottomScreenDiv">
-        <img src="./imgs/HeadShotBAdge.png" alt="">
-        <div class="KillTextDownScreen">
-            <p>Head Shot Kill Number 20</p>
-            <p>Head Shot Kill Number 20</p>
-        </div>
+
+      <div class="AllBadgesArchived">
+        <div class="TextBottomScreenDiv">
+            <img src="./imgs/HeadShotBAdge.png" alt="">
+            <div class="KillTextDownScreen">
+                <p>Head Shot Kill Number 20</p>
+                <p>Head Shot Kill Number 20</p>
+            </div>
+          </div>
       </div>
 
 
