--- a/index.html
+++ b/index.html
@@ -1961,7 +1961,7 @@
 
 
       <div class="AllBadgesArchived">
-        <div class="TextBottomScreenDiv">
+        <div class="TextBottomScreenDiv animate__fadeInLeft animate__animated">
             <img src="./imgs/HeadShotBAdge.png" alt="">
             <div class="KillTextDownScreen">
                 <p>Head Shot Kill Number 20</p>
