--- a/index.html
+++ b/index.html
@@ -1963,9 +1963,9 @@
       <div class="AllBadgesArchived">
         <div class="TextBottomScreenDiv animate__fadeInLeft animate__animated">
             <img src="./imgs/HeadShotBAdge.png" alt="">
-            <div class="KillTextDownScreen">
-                <p>Head Shot Kill Number 20</p>
-                <p>Head Shot Kill Number 20</p>
+            <div class="BadgeModalScreen">
+                <p>100 Head Shot Kill</p>
+                <p>100 Head Shot Kill</p>
             </div>
           </div>
       </div>
