--- a/index.html
+++ b/index.html
@@ -1967,6 +1967,7 @@
                 <p>100 Head Shot Kill</p>
                 <p>100 Head Shot Kill</p>
             </div>
+            <p class="TextArchived">Congratulations , You unlocked the 100 Headshot Badge, awesome work</p>
           </div>
       </div>
 
