--- a/index.html
+++ b/index.html
@@ -1962,6 +1962,17 @@
 
       <div class="AllBadgesArchived">
         <div class="TextBottomScreenDiv animate__fadeInLeft animate__animated">
+            <div class="HeadShotBadgeArchivedRedLine"></div>
+            <img src="./imgs/HeadShotBAdge.png" alt="">
+            <div class="BadgeModalScreen">
+                <p>100 Head Shot Kill</p>
+                <p>100 Head Shot Kill</p>
+            </div>
+            <p class="TextArchived">Congratulations , You unlocked the 100 Headshot Badge, awesome work</p>
+          </div>
+
+          <div class="TextBottomScreenDiv animate__fadeInLeft animate__animated">
+            <div class="HeadShotBadgeArchivedRedLine"></div>
             <img src="./imgs/HeadShotBAdge.png" alt="">
             <div class="BadgeModalScreen">
                 <p>100 Head Shot Kill</p>
