Fix some dumb shit

--- a/index.html
+++ b/index.html
@@ -1966,17 +1966,17 @@
             <img src="./imgs/HeadShotBAdge.png" alt="">
             <div class="BadgeModalScreen">
                 <p>100 Head Shot Kill</p>
-                <p>100 Head Shot Kill</p>
+                <p>10<span class="HeadShotColor">0</span> Hea<span class="HeadShotColor">d</span> Sho<span class="HeadShotColor">t</span> Kil<span class="HeadShotColor">l</span></p>
             </div>
             <p class="TextArchived">Congratulations , You unlocked the 100 Headshot Badge, awesome work</p>
           </div>
 
           <div class="TextBottomScreenDiv animate__fadeInLeft animate__animated">
-            <div class="HeadShotBadgeArchivedRedLine"></div>
-            <img src="./imgs/HeadShotBAdge.png" alt="">
+            <div class="PlayerBadgeArchivedRedLine"></div>
+            <img src="./imgs/PlayerBadge.png">
             <div class="BadgeModalScreen">
-                <p>100 Head Shot Kill</p>
-                <p>100 Head Shot Kill</p>
+                <p>100 matchs Badge</p>
+                <p>10<span class="MatchColor">0</span> Match<span class="MatchColor">s</span> Badg<span class="MatchColor">e</span></p>
             </div>
             <p class="TextArchived">Congratulations , You unlocked the 100 Headshot Badge, awesome work</p>
           </div>
